package com.vibetags.processor;

import com.vibetags.annotations.AIContext;
import com.vibetags.annotations.AIAudit;
import com.vibetags.annotations.AILocked;

import javax.annotation.processing.*;
import javax.tools.Diagnostic;
import javax.lang.model.SourceVersion;
import javax.lang.model.element.Element;
import javax.lang.model.element.TypeElement;
import java.io.FileWriter;
import java.io.IOException;
import java.io.PrintWriter;
import java.nio.file.Files;
import java.nio.file.Path;
import java.nio.file.Paths;
import java.util.LinkedHashMap;
import java.util.Map;
import java.util.Set;

@SupportedAnnotationTypes("com.vibetags.annotations.*")
@SupportedSourceVersion(SourceVersion.RELEASE_11)
public class AIGuardrailProcessor extends AbstractProcessor {

    @Override
    public boolean process(Set<? extends TypeElement> annotations, RoundEnvironment roundEnv) {
        if (annotations.isEmpty()) return false;

        String rootPath = Paths.get("").toAbsolutePath().toString();

        StringBuilder cursorRules = new StringBuilder("# AUTO-GENERATED AI RULES\n# Do not edit manually. Generated by VibeTags.\n\n## LOCKED FILES (DO NOT EDIT)\n");
        StringBuilder claudeMd = new StringBuilder("<project_guardrails>\n  <locked_files>\n");
        StringBuilder aiExclude = new StringBuilder("# AUTO-GENERATED BY VIBETAGS\n# The following files are strictly excluded from AI context.\n");
        StringBuilder chatGpt = new StringBuilder("# Project Knowledge\n\n## Locked Files\n");
        StringBuilder geminiMd = new StringBuilder("# CONTINUOUS AUDIT REQUIREMENTS\nYou are acting as a Senior Staff Engineer. Whenever you write code for the files listed below, you must ensure your completions and chat responses strictly prevent the listed vulnerabilities:\n\n");
        
        // Audit sections for each platform
        StringBuilder cursorAudit = new StringBuilder("\n## 🛡️ MANDATORY SECURITY AUDITS\nWhen proposing edits or writing code for the following files, you MUST perform a security review before outputting the final code. You must explicitly state in your response that you have audited the changes for the required vulnerabilities.\n\n");
        StringBuilder claudeAudit = new StringBuilder("  <audit_requirements>\n");
        StringBuilder chatGptAudit = new StringBuilder("\n### 🔎 SECURITY GUARDRAILS (ENFORCE STRICTLY)\nBefore generating any final code snippets for the files below, you must run a simulated security audit on your own output. \n\n");

        // Process @AILocked
        for (Element element : roundEnv.getElementsAnnotatedWith(AILocked.class)) {
            AILocked locked = element.getAnnotation(AILocked.class);
            String className = element.toString();
            String reason = locked.reason();

            cursorRules.append("* `").append(className).append("` - Reason: ").append(reason).append("\n");

            claudeMd.append("    <file path=\"").append(className).append("\">\n")
                    .append("      <reason>").append(reason).append("</reason>\n")
                    .append("    </file>\n");

            aiExclude.append("**/").append(element.getSimpleName()).append(".java\n");

            chatGpt.append("- **").append(className).append("**: ").append(reason).append("\n");
        }

        claudeMd.append("  </locked_files>\n  <contextual_instructions>\n");
        cursorRules.append("\n## CONTEXTUAL RULES\n");
        chatGpt.append("\n## Contextual Rules\n");

        // Process @AIContext
        for (Element element : roundEnv.getElementsAnnotatedWith(AIContext.class)) {
            AIContext context = element.getAnnotation(AIContext.class);
            String className = element.toString();

            cursorRules.append("* `").append(className).append("`\n  * Focus: ").append(context.focus())
                       .append("\n  * Avoid: ").append(context.avoids()).append("\n");

            claudeMd.append("    <file path=\"").append(className).append("\">\n")
                    .append("      <focus>").append(context.focus()).append("</focus>\n")
                    .append("      <avoids>").append(context.avoids()).append("</avoids>\n")
                    .append("    </file>\n");

            chatGpt.append("- **").append(className).append("**: Focus on ").append(context.focus())
                   .append(". Avoid ").append(context.avoids()).append(".\n");
        }

        claudeMd.append("  </contextual_instructions>\n");

        // Process @AIAudit
        boolean hasAuditAnnotations = false;
        for (Element element : roundEnv.getElementsAnnotatedWith(AIAudit.class)) {
            AIAudit audit = element.getAnnotation(AIAudit.class);
            String className = element.toString();
            String[] checkFor = audit.checkFor();
            
            if (checkFor.length == 0) continue;
            
            hasAuditAnnotations = true;
            
            // Cursor: Add to mandatory security audits section
            cursorAudit.append("* `").append(className).append("`\n");
            cursorAudit.append("  - Required Checks: ").append(String.join(", ", checkFor)).append("\n");
            
            // Claude: Add XML audit requirements
            claudeAudit.append("    <file path=\"").append(className).append("\">\n");
            for (String vulnerability : checkFor) {
                claudeAudit.append("      <vulnerability_check>").append(vulnerability).append("</vulnerability_check>\n");
            }
            claudeAudit.append("    </file>\n");
            
            // Gemini: Add continuous audit requirements
            geminiMd.append("File: `").append(className).append("`");
            geminiMd.append("\nCritical Vulnerabilities to Prevent: ");
            for (String vulnerability : checkFor) {
                geminiMd.append("\n- ").append(vulnerability);
            }
            geminiMd.append("\n\n");
            
            // ChatGPT: Add security guardrails
            chatGptAudit.append("Target File: `").append(className).append("`");
            chatGptAudit.append("\nAudit Checklist:");
            for (int i = 0; i < checkFor.length; i++) {
                chatGptAudit.append("\n").append(i + 1).append(". Is this code vulnerable to ").append(checkFor[i]).append("?");
            }
            chatGptAudit.append("\n\nIf the answer to either is YES, discard your draft and rewrite the code securely.\n\n");
        }
        
        // Finalize audit sections
        if (hasAuditAnnotations) {
            cursorRules.append(cursorAudit);
            
            claudeAudit.append("  </audit_requirements>\n");
            claudeMd.append(claudeAudit);
            claudeMd.append("\n<rule>\n  If you are asked to modify any file listed in <audit_requirements>, you must first silently analyze your proposed code for the listed <vulnerability_check> items. If your code introduces these vulnerabilities, you must rewrite it before displaying it to the user.\n</rule>\n");
            
            chatGpt.append(chatGptAudit);
        }
        
        claudeMd.append("</project_guardrails>\n");
        claudeMd.append("\n<rule>Never propose edits to files listed in <locked_files>.</rule>\n");

        // Only regenerate files that already exist — presence on disk is the opt-in signal.
        // If none exist, warn and list what the user can create to opt in.
        Path root = Paths.get(rootPath);
        Map<String, Path> serviceFiles = buildServiceFileMap(root);
        Set<String> activeServices = resolveActiveServices(processingEnv.getMessager(), serviceFiles);

        if (activeServices.contains("cursor"))    writeFile(rootPath + "/.cursorrules", cursorRules.toString());
        if (activeServices.contains("claude"))    writeFile(rootPath + "/CLAUDE.md", claudeMd.toString());
        if (activeServices.contains("aiexclude")) writeFile(rootPath + "/.aiexclude", aiExclude.toString());
        if (activeServices.contains("chatgpt"))   writeFile(rootPath + "/chatgpt_instructions.md", chatGpt.toString());
        if (activeServices.contains("gemini"))    writeFile(rootPath + "/gemini_instructions.md", geminiMd.toString());

        return true;
    }

    /**
     * Returns the canonical map of service key → output file path for a given project root.
     */
    static Map<String, Path> buildServiceFileMap(Path root) {
        Map<String, Path> map = new LinkedHashMap<>();
        map.put("cursor",    root.resolve(".cursorrules"));
        map.put("claude",    root.resolve("CLAUDE.md"));
        map.put("aiexclude", root.resolve(".aiexclude"));
        map.put("chatgpt",   root.resolve("chatgpt_instructions.md"));
        map.put("gemini",    root.resolve("gemini_instructions.md"));
        return map;
    }

    /**
     * Resolves which services should have their files written.
     * Only files that already exist on disk are regenerated — their presence is the opt-in signal.
     * If none of the output files exist, a NOTE is logged listing what the user can create to opt in.
     */
    static Set<String> resolveActiveServices(Messager messager, Map<String, Path> serviceFiles) {
        Set<String> active = serviceFiles.entrySet().stream()
            .filter(e -> Files.exists(e.getValue()))
            .map(Map.Entry::getKey)
            .collect(java.util.stream.Collectors.toSet());

        if (active.isEmpty()) {
            StringBuilder msg = new StringBuilder(
                "VibeTags: No AI config files found — nothing will be generated.\n" +
                "Create one or more of the following files in your project root to opt in:\n");
            serviceFiles.forEach((key, path) ->
                msg.append("  ").append(path.getFileName()).append("\n"));
            messager.printMessage(javax.tools.Diagnostic.Kind.NOTE, msg.toString());
        }

        return active;
    }

    private void writeFile(String path, String content) {
        try (PrintWriter out = new PrintWriter(new FileWriter(path))) {
            out.println(content);
        } catch (IOException e) {
            processingEnv.getMessager().printMessage(
                javax.tools.Diagnostic.Kind.WARNING, "VibeTags: Failed to write AI rules file: " + path
            );
        }
    }
}
